# counterpoint

./: .gitignore  pyproject.toml  reproduce_issue.py  test_gradient_flow.py
conf/: base.yaml
docs/: chords.md  rules.md  rules_jacobs01.md  rules_paslclrade97.md  table_a.md  table_b.md  table_c.md
src/counterpoint/: annotate.py  cli.py  main.py  policies.py  train.py
src/counterpoint/data/: __init__.py  demonstrations.py  scores.py
src/counterpoint/envs/: __init__.py  jacobs_rewards.py  parncutt_rewards.py  piano_env.py  rewards.py  score_generators.py
src/counterpoint/envs/render/: piano_render.py
src/counterpoint/exploration/: __init__.py  bc.py  diagnostic_trainer.py  manager.py  rnd.py  trainer.py
src/counterpoint/linear/: __init__.py  agent.py  rules.py  runner.py
src/counterpoint/policies/: __init__.py  cnn.py  decoder.py  heads.py  layers.py  mixins.py  simple.py  transformer.py  wrappers.py
src/counterpoint/rules/: __init__.py  jacobs01.py  parncutt97.py
src/counterpoint/scores/: __init__.py  chords.py  demonstrations.py  mei.py  scales.py
tests/: debug_test.py  test_jacobs_rules.py  test_parncutt_rules.py  test_table_repro.py  test_user_cases.py
