[project]
name = "counterpoint"
version = "0.1.0"
description = "RL Pipeline for Piano Fingering"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "skrl>=1.4.3",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "typer>=0.21.1",
]

[project.scripts]
counterpoint = "counterpoint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
